src/objects/EventLog__c.object
<CustomObject>
    <fields>
        <fullName>ActualCompletedDate__c</fullName>
        <label>ActualCompletedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CaseID__c</fullName>
        <label>CaseID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompletedBy__c</fullName>
        <label>CompletedBy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_to_complete_event__c</fullName>
        <formula>ActualCompletedDate__c - CreatedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to complete event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventStatus__c</fullName>
        <label>EventStatus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>EventLogs</relationshipLabel>
        <relationshipName>EventLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExpectedCompletionDate__c</fullName>
        <label>ExpectedCompletionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsExpired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExpired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>EventLogs</relationshipLabel>
        <relationshipName>EventLogs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>EventLog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EventLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventLogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>